WIP: Paranoid Android UI redo:
Added auto light/dark mode with automatic refresh
Implemented proper changelog
Changed font to HarmonyOS OSS
Improved search function
Ordered builds by romtype and version
Per device build changelog
Ordered brands alphabetically
Ordered devices alphabetically in reverse
Made devices and builds objects lighter
Removed unused stuff
Changed everything to PA

Signed-off-by: Hernán Castañón <herna@paranoidandroid.co>

--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Install packages
         run: npm i
       - name: Set Creds
-        run: git config user.name "rajkale99" && git config user.email "kaleraj.rk@gmail.com"
+        run: git config user.name "Herna1994" && git config user.email "herna@paranoidandroid.co"
       - name: Deploy
         run: npm run deploy
